--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,6 +7,8 @@ body {
   will-change: overflow;
   height: 100dvh;
   width: 100dvw;
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,5 +19,6 @@ body {
   body {
     overflow: auto;
     backface-visibility: visible;
+    position: absolute;
   }
 }
